# tensor_test_task

./: .env-example  README.md  cli.py  config.py  db.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  sample.json  usecase.py
infra/: db.py  organization_repository.py
tests/: conftest.py  test_cli.py  test_db.py  test_usecase.py
typings/asyncpg/: _asyncio_compat.pyi  cluster.pyi  compat.pyi  connect_utils.pyi  connection.pyi  connresource.pyi  cursor.pyi  introspection.pyi  pool.pyi  prepared_stmt.pyi  serverversion.pyi  transaction.pyi  types.pyi
typings/asyncpg/_testbase/: __init__.pyi  fuzzer.pyi
typings/asyncpg/exceptions/: __init__.pyi  _base.pyi
typings/asyncpg/pgproto/: pgproto.pyi  types.pyi
typings/asyncpg/protocol/: protocol.pyi
