[project]
name = "tensor-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg-stubs>=0.30.0",
    "asyncpg>=0.30.0",
    "colorama>=0.4.6",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
]
[tool.pyright]
stubPath = "typings"
