[project]
name = "tensor-test-task"
version = "0.1.0"
description = "Json > Postgres and finding employees by id"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg-stubs==0.30.0",
  "asyncpg==0.30.0",
  "colorama==0.4.6",
  "pytest-asyncio==0.25.3",
  "pytest==8.3.4",
  "python-dotenv==1.0.1",
  "tqdm==4.67.1",
]
[tool.pyright]
stubPath = "typings"
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-p no:warnings"
